k8s/notification-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
