k8s/notification-service/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: notification-service
spec:
  hosts:
    - "notification-service.local"
  gateways:
    - shared-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: notification-service
            port:
              number: 8080
